# module-34_task-1

./: CMakeLists.txt  main.cpp  task1_description.docx
